--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "assessment-weather-forecast",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://parichkova.github.io/weather-forecast/",
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "moment": "^2.24.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
